docs/mechanical/mechanical-scripting-interface/versions/2025.R2.SP00/api/ansys/mechanical/stubs/v251/Ansys/Mechanical/DataModel/Enums/MappingValidationDisplayOption.md
# `MappingValidationDisplayOption`

<a id="ansys.mechanical.stubs.v251.Ansys.Mechanical.DataModel.Enums.MappingValidationDisplayOption"></a>

#### *class* Ansys.Mechanical.DataModel.Enums.MappingValidationDisplayOption

Bases: [`enum.Enum`](https://docs.python.org/3/library/enum.html#enum.Enum)

<!-- !! processed by numpydoc !! -->

<a id="overview"></a>

## Overview

### Attributes

| Name |
| ---------------------------------------------------------------------- |
| [`Boxes`](#MappingValidationDisplayOption.Boxes) |
| [`ColoredDiamonds`](#MappingValidationDisplayOption.ColoredDiamonds) |
| [`ColoredPoints`](#MappingValidationDisplayOption.ColoredPoints) |
| [`ColoredSphere`](#MappingValidationDisplayOption.ColoredSphere) |
| [`Contours`](#MappingValidationDisplayOption.Contours) |
| [`Isolines`](#MappingValidationDisplayOption.Isolines) |
| [`ScaledSphere`](#MappingValidationDisplayOption.ScaledSphere) |

<a id="attribute-detail"></a>

## Attribute detail

<a id="MappingValidationDisplayOption.Boxes"></a>

### MappingValidationDisplayOption.Boxes *= 2*

<a id="MappingValidationDisplayOption.ColoredDiamonds"></a>

### MappingValidationDisplayOption.ColoredDiamonds *= 4*

<a id="MappingValidationDisplayOption.ColoredPoints"></a>

### MappingValidationDisplayOption.ColoredPoints *= 3*

<a id="MappingValidationDisplayOption.ColoredSphere"></a>

### MappingValidationDisplayOption.ColoredSphere *= 1*

<a id="MappingValidationDisplayOption.Contours"></a>

### MappingValidationDisplayOption.Contours *= 6*

<a id="MappingValidationDisplayOption.Isolines"></a>

### MappingValidationDisplayOption.Isolines *= 5*

<a id="MappingValidationDisplayOption.ScaledSphere"></a>

### MappingValidationDisplayOption.ScaledSphere *= 0*


